add collect to list instead of toList in get all mappings group by source ontology method